# pronounce-ai

./: .gitignore  README.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  errors.py
backend/app/middleware/: rate_limit.py
backend/app/schemas/: assessment.py
backend/app/services/: assessment.py  audio.py  feedback.py  scoring.py  transcription.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/ui/: button.tsx  progress-ring.tsx
frontend/src/features/assessment/: api.ts  processing.tsx  results.tsx  types.ts  upload-card.tsx
frontend/src/features/assessment/components/: animated-score.tsx  feedback-card.tsx  metric-card.tsx  transcript-viewer.tsx  waveform-player.tsx
frontend/src/lib/: utils.ts
frontend/src/providers/: query-provider.tsx
