[project]
name = "livo-ai-backend"
version = "0.1.0"
description = "FastAPI service for AI-powered English pronunciation assessment."
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.116.0",
  "openai==1.93.0",
  "pydantic-settings==2.10.1",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
]

[tool.uv]
package = false
